# cpp_plus_cmake_plus_gtest_learning

hello_world/: CMakeLists.txt  README  hello_test.cc  hello_world.cc  hello_world.h
stock00/: CMakeLists.txt  stock00.cc  stock00.h  stock00_test.cc
